--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "astro-kitties",
+  "name": "astrokitties",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,7 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.3",
-    "typeface-poppins": "^1.1.13",
+    "typeface-rubik": "^1.1.13",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
