--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-sky": "^1.1.0",
     "styled-components": "^5.2.3",
     "typeface-rubik": "^1.1.13",
     "web-vitals": "^1.0.1"
